buildscript {
	dependencies {
		classpath 'org.postgresql:postgresql:42.2.5'
	}
}

plugins {
	id 'io.spring.dependency-management' version '1.0.8.RELEASE'
	id 'org.springframework.boot' version '2.2.2.RELEASE'
	id 'io.freefair.lombok' version '4.1.6'
	id 'org.flywaydb.flyway' version '6.1.3'
	id 'org.sonarqube' version '2.8'
	id 'java'
	id 'jacoco'
}

ext {
	guavaVersion = '28.1-jre'
	springBootAutoconfigureR2dbcVersion = '0.1.0.BUILD-SNAPSHOT'
	springDataR2dbcVersion = '1.0.0.RELEASE'
	r2dbcVersion = '0.8.0.RELEASE'
	nettyVersion = '4.1.39.Final'
	jjwtVersion = '0.10.7'
	jaxbApiVersion = '2.3.1'
	flywayVersion = '6.1.3'
	bouncycastleVersion = '1.68'
}

group = 'org.briarheart'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '12'

repositories {
	mavenCentral()
	maven { url 'https://repo.spring.io/milestone' }
	maven { url 'https://repo.spring.io/snapshot' }
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation("org.springframework.boot.experimental:spring-boot-autoconfigure-r2dbc:$springBootAutoconfigureR2dbcVersion") {
		exclude group: 'io.r2dbc'
	}
	implementation "org.springframework.data:spring-data-r2dbc:$springDataR2dbcVersion"
	implementation 'org.springframework:spring-jdbc'
	implementation "io.r2dbc:r2dbc-postgresql:$r2dbcVersion"
	implementation "com.google.guava:guava:$guavaVersion"
	implementation "io.jsonwebtoken:jjwt-api:$jjwtVersion"

	runtimeOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'org.postgresql:postgresql'
	runtimeOnly "io.r2dbc:r2dbc-spi:$r2dbcVersion"
	runtimeOnly "io.r2dbc:r2dbc-pool:$r2dbcVersion"
	runtimeOnly "org.flywaydb:flyway-core:$flywayVersion"
	runtimeOnly "io.netty:netty-codec-http:$nettyVersion"
	runtimeOnly "io.netty:netty-codec-http2:$nettyVersion"
	runtimeOnly "io.netty:netty-handler-proxy:$nettyVersion"
	runtimeOnly "io.jsonwebtoken:jjwt-impl:$jjwtVersion"
	runtimeOnly "io.jsonwebtoken:jjwt-jackson:$jjwtVersion"
	runtimeOnly "javax.xml.bind:jaxb-api:$jaxbApiVersion"
	runtimeOnly "org.bouncycastle:bcprov-jdk15on:$bouncycastleVersion"

	testImplementation('org.springframework.boot:spring-boot-starter-test') {
		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
	}
	testImplementation 'io.projectreactor:reactor-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation "io.r2dbc:r2dbc-h2:$r2dbcVersion"

	testRuntimeOnly 'com.h2database:h2'

	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
}

test {
	environment 'DATABASE_URL', 'h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE'
	environment 'DATABASE_USERNAME', 'sa'
	environment 'DATABASE_PASSWORD', ''
	useJUnitPlatform()
}
